--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 HTTP_PORT=8080
-DB_CONNECTION=mongodb+srv://<username>:<password?@cluster0.kib8f.mongodb.net/capstonet3?retryWrites=true&w=majority
+DB_CONNECTION=mongodb+srv://capstone:CapstoneTeam3@cluster0.kib8f.mongodb.net/capstonet3?retryWrites=true&w=majority
 APP_VERSION=1.0
